--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,31 +1,100 @@
-body {
-  font-family: "Raleway", sans-serif;
-  font-family: "Roboto", sans-serif;
-  background-color: #e5e5e5;
+:root {
+  --primary-text-color: #212121;
+  --title-text-color: #000;
+  --acent-color: #2196f3;
+  --primary-color: #fff;
+  --links-footer-color: #fff;
 }
 
-.links:hover {
-  color: #2196f3;
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: var(--primary-color);
 }
+
+.main {
+  width: 1600px;
+  height: 2349px;
+}
+.header {
+  height: 80px;
+  left: 0px;
+  top: 0px;
+  background: var(--links-footer-color);
+}
+
+.contact-header {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.links {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.links-footer {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+
+  color: var(--links-footer-color);
+}
+.links:hover {
+  color: var(--acent-color);
+}
+.links-footer:hover {
+  color: var(--acent-color);
+}
+.contact-header:hover {
+  color: var(--acent-color);
+}
+
 .logo-web {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.2;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--acent-color);
 }
 .logo-studio {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.2;
   letter-spacing: 0.03em;
-  color: #000000;
+  color: var(--title-text-color);
 }
+.contact-footer {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer {
+  height: 252px;
+  left: 0px;
+  top: 2097px;
+  background: #2f303a;
+}
+
 .button {
+  font-family: inherit;
   width: 128px;
   height: 38px;
   left: 576px;
@@ -36,4 +105,104 @@ body {
 }
 .button:hover {
   color: #ffff;
+  background-color: var(--acent-color);
+}
+
+.hero {
+  height: 600px;
+  left: 0px;
+  top: 80px;
+  background: #2f303a;
+}
+.hero-title {
+  position: absolute;
+  width: 696px;
+  height: 120px;
+  left: 452px;
+  top: 280px;
+
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--links-footer-color);
+}
+.button-buy {
+  font-family: inherit;
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  background-color: #2196f3;
+  color: var(--links-footer-color);
+  border-radius: 4px;
+}
+.our-target {
+  width: 1170px;
+  height: 101px;
+  left: 215px;
+  top: 774px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+
+  letter-spacing: 0.03em;
+}
+.target-description {
+  width: 270px;
+  height: 75px;
+  left: 515px;
+  top: 800px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.team {
+  height: 648px;
+  left: 0px;
+  top: 1449px;
+
+  background: #f5f4fa;
+}
+.descreption-user {
+  width: 147px;
+  height: 19px;
+  left: 577px;
+  top: 1954px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+.analyze {
+  width: 1170px;
+  height: 386px;
+  left: 215px;
+  top: 969px;
+}
+.description-project {
+  width: 322px;
+  height: 30px;
+  left: 239px;
+  top: 616px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+
+  color: #757575;
 }
