--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,15 +10,7 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--primary-color);
 }
-
-.main {
-  width: 1600px;
-  height: 2349px;
-}
 .header {
-  height: 80px;
-  left: 0px;
-  top: 0px;
   background: var(--links-footer-color);
 }
 
@@ -50,13 +42,17 @@ body {
 
   color: var(--links-footer-color);
 }
-.links:hover {
+
+.links:hover,
+.links:focus {
   color: var(--acent-color);
 }
-.links-footer:hover {
+.links-footer:hover,
+.links-footer:focus {
   color: var(--acent-color);
 }
-.contact-header:hover {
+.contact-header:hover,
+.contact-header:focus {
   color: var(--acent-color);
 }
 
@@ -77,6 +73,19 @@ body {
   line-height: 1.2;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  text-decoration: none;
+  cursor: default;
+}
+.logo-studio-footer {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--links-footer-color);
+  text-decoration: none;
+  cursor: default;
 }
 .contact-footer {
   font-style: normal;
@@ -88,40 +97,38 @@ body {
 }
 .footer {
   height: 252px;
-  left: 0px;
-  top: 2097px;
+
   background: #2f303a;
 }
 
 .button {
   font-family: inherit;
-  width: 128px;
-  height: 38px;
-  left: 576px;
-  top: 174px;
   background: #f5f4fa;
   border-radius: 4px;
   cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
-.button:hover {
+.button:hover,
+.button:focus {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
   color: #ffff;
   background-color: var(--acent-color);
 }
 
 .hero {
-  height: 600px;
-  left: 0px;
-  top: 80px;
   background: #2f303a;
 }
 .hero-title {
-  position: absolute;
   width: 696px;
-  height: 120px;
-  left: 452px;
-  top: 280px;
-
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 60px;
@@ -132,77 +139,87 @@ body {
 }
 .button-buy {
   font-family: inherit;
-  position: absolute;
   width: 200px;
-  height: 50px;
-  left: 700px;
-  top: 430px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
   background-color: #2196f3;
   color: var(--links-footer-color);
   border-radius: 4px;
 }
 .our-target {
-  width: 1170px;
-  height: 101px;
-  left: 215px;
-  top: 774px;
-  font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 14px;
-
+  line-height: 16px;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 .target-description {
-  width: 270px;
-  height: 75px;
-  left: 515px;
-  top: 800px;
-
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
+  text-transform: none;
 }
 .team {
-  height: 648px;
-  left: 0px;
-  top: 1449px;
-
-  background: #f5f4fa;
-}
-.descreption-user {
-  width: 147px;
-  height: 19px;
-  left: 577px;
-  top: 1954px;
-
-  font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
 
+  color: var(--primary-text-color);
+  background: #f5f4fa;
+}
+.descreption-user {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
   color: #757575;
 }
-.analyze {
-  width: 1170px;
-  height: 386px;
-  left: 215px;
-  top: 969px;
-}
-.description-project {
-  width: 322px;
-  height: 30px;
-  left: 239px;
-  top: 616px;
 
-  font-style: normal;
+.description-project {
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
-
   color: #757575;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.lists {
+  list-style: none;
+}
+.links-posters {
+  text-decoration: none;
+}
+.team-description {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+.posters {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+
+  color: var(--title-text-color);
 }
